--- a/index.html
+++ b/index.html
@@ -304,6 +304,22 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Annisa Febryanti
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/dvi.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -353,6 +369,38 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Deden Dapa Khoerul Hildan
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Dian Puspitasari
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/dki.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -369,6 +417,70 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Feni Anggraeni
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Fhasa Oktaviani Putri
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Ghifari Septiana
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Giovani Gaghana
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/hfy.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -379,6 +491,54 @@
                     </h5>
                     <h3>
                       Hafiyyan Fauzan
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Haolatul Mubarokah
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Hayatul Hasanah
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Heni Oktaviani
                     </h3>
                   </div>
                 </div>
@@ -449,6 +609,22 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Mely Nur Anggraeni
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/fkr.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -475,6 +651,22 @@
                     </h5>
                     <h3>
                       Munawwar Darobby
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Novi Kartika Sari
                     </h3>
                   </div>
                 </div>
@@ -529,6 +721,38 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Rivan Maulana
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Rizal Permana
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/rzk.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -545,6 +769,22 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Selvi Nur Apriani
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/sptnr.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -555,6 +795,22 @@
                     </h5>
                     <h3>
                       Septian Ramdani
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="link">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                    Wahyu Witanto
                     </h3>
                   </div>
                 </div>
