--- a/work.html
+++ b/work.html
@@ -350,7 +350,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/henioktaviani/beranda">
                         selengkapnya
                       </a>
                     </h5>
