--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/portofolio-selvi1/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
