--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
             </a>
-            <a href="#">
+            <a href="https://www.tiktok.com/@xitjkt.nesapa?_t=8mUevSlxDvk&_r=1">
               <img src="images/tt.png" alt="">
             </a>
           </div>
