--- a/about.html
+++ b/about.html
@@ -140,8 +140,8 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="tjktcxi@gmail.com">
-              <img src="images/mail.png" alt="">
+            <a href="">
+              <img src="images/youtube.png" alt="">
             </a>
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
