--- a/work.html
+++ b/work.html
@@ -670,13 +670,13 @@
           </div>
           <div class="social_box">
             <a href="tjktcxi@gmail.com">
-              <img src="images/mail.png" alt="">
+              <img src="images/youtube.png" alt="">
             </a>
             <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
             </a>
-            <a href="#">
-              <img src="images/youtube.png" alt="">
+            <a href="https://www.tiktok.com/@xitjkt.nesapa?_t=8mUevSlxDvk&_r=1">
+              <img src="images/tt.png" alt="">
             </a>
           </div>
         </div>
