--- a/work.html
+++ b/work.html
@@ -739,7 +739,9 @@
                 <div class="col-md-3">
                   <a href="#" class="link-box">
                     <div class="img-box">
+<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627">
                       <img src="images/location.png" alt="">
+</a>
                     </div>
                     <div class="detail-box">
                       <h6>
