--- a/category.html
+++ b/category.html
@@ -247,6 +247,7 @@
                 <div class="col-md-3">
                   <a href="#" class="link-box">
                     <div class="img-box">
+<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627 </a>
                       <img src="images/location.png" alt="">
                     </div>
                     <div class="detail-box">
