--- a/index.html
+++ b/index.html
@@ -922,11 +922,9 @@
               <div class="row">
                 <div class="col-md-3">
                   <a href="#" class="link-box">
-                    <div class="img-box">
-<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627>
-</a>
+                                        <div class="img-box">
+<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627 </a>
                       <img src="images/location.png" alt="">
-
                     </div>
                     <div class="detail-box">
                       <h6>
