--- a/category.html
+++ b/category.html
@@ -184,7 +184,7 @@
               <img src="images/instagram.png" alt="">
             </a>
             <a href="https://www.tiktok.com/@xitjkt.nesapa?_t=8mUevSlxDvk&_r=1">
-              <img src="images/tt.png" alt="">
+              <img src="images/ttt.png" alt="">
             </a>
           </div>
         </div>
@@ -245,9 +245,8 @@
             <div class="info_contact layout_padding2">
               <div class="row">
                 <div class="col-md-3">
-                  <a href="#" class="link-box">
+                  <a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627" class="link-box">
                                         <div class="img-box">
-<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627 </a>
                       <img src="images/location.png" alt="">
                     </div>
                     <div class="detail-box">
