--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
             <div class="info_contact layout_padding2">
               <div class="row">
                 <div class="col-md-3">
-                  <a href="#" class="link-box">
+                  <a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627" class="link-box">
                     <div class="img-box">
                       <img src="images/location.png" alt="">
                     </div>
