--- a/index.html
+++ b/index.html
@@ -921,11 +921,11 @@
             <div class="info_contact layout_padding2">
               <div class="row">
                 <div class="col-md-3">
-                  <a href="#" class="link-box">
+                                    <a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627" class="link-box">
                                         <div class="img-box">
-<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627 </a>
                       <img src="images/location.png" alt="">
                     </div>
+                  
                     <div class="detail-box">
                       <h6>
                         SMKN 1 PADAHERANG
