--- a/work.html
+++ b/work.html
@@ -738,10 +738,9 @@
               <div class="row">
                 <div class="col-md-3">
                   <a href="#" class="link-box">
-                    <div class="img-box">
-<a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627">
+                                      <a href="https://maps.app.goo.gl/cG2bsm8kRQ4wfE627" class="link-box">
+                                        <div class="img-box">
                       <img src="images/location.png" alt="">
-</a>
                     </div>
                     <div class="detail-box">
                       <h6>
