--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/anggara.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -320,7 +320,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/dvi.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -337,7 +337,7 @@
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
                 
-                    <img src="images/dpd.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -353,7 +353,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/dd.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -369,11 +369,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/dedendapakherulhildan/beranda">
                         selengkapnya
                       </a>
                     </h5>
@@ -401,7 +401,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/dki.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -481,7 +481,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/hfy.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -545,7 +545,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/ilf.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -561,7 +561,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/irg.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -577,7 +577,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/ishq.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -593,7 +593,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/kh.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -625,7 +625,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/fkr.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -641,7 +641,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/mnwr.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -673,7 +673,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/ptri.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -689,7 +689,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/rfj.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -705,7 +705,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/rni.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -753,7 +753,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/rzk.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -785,7 +785,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/sptnr.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
