--- a/work.html
+++ b/work.html
@@ -105,7 +105,7 @@
               <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/anggara.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -137,7 +137,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/dvi.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -154,7 +154,7 @@
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
                 
-                    <img src="images/dpd.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -170,7 +170,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/dd.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -186,11 +186,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://sites.google.com/view/dedendapakherulhildan/beranda">
                         selengkapnya
                       </a>
                     </h5>
@@ -218,7 +218,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/dki.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -298,7 +298,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/hfy.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -362,7 +362,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/ilf.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -378,7 +378,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/irg.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -394,7 +394,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/ishq.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -410,7 +410,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/kh.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -442,7 +442,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/fkr.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -458,7 +458,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/mnwr.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -490,7 +490,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/ptri.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -506,7 +506,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/rfj.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -522,7 +522,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/rni.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -570,7 +570,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/rzk.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -602,7 +602,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/sptnr.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
