--- a/index.html
+++ b/index.html
@@ -268,6 +268,18 @@
         </a>
       </div>
     </div>
+      <div class="detail-box">
+        <h2>
+         galeri Kelas
+        </h2>
+        <p>
+        XI TJKT C
+        </p>
+        <a href="">
+          Galeri
+        </a>
+      </div>
+    </div>
   </section>
 
   <!-- end about section -->
