--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="detail-box">
        
         <a href="">
-          Galeri
+          Galeri TJKT C
         </a>
       </div>
     </div>
