--- a/work.html
+++ b/work.html
@@ -526,7 +526,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/view/renidwioktavia/profil?authuser=0">
+                      <a href="https://sites.google.com/smkn1padaherang.sch.id/reni-dwi-oktavia/beranda?authuser=1">
                         selengkapnya
                       </a>
                     </h5>
@@ -586,11 +586,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/view/portofolio-selvi1/halaman-muka">
+                      <a href="https://sites.google.com/smkn1padaherang.sch.id/selvi/beranda?authuser=1">
                         selengkapnya
                       </a>
                     </h5>
