--- a/index.html
+++ b/index.html
@@ -808,11 +808,11 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/pp.png" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="link">
+                      <a href="https://jsjkajajannvvb.webnode.page/">
                         selengkapnya
                       </a>
                     </h5>
